style.css
body, html {
    margin: 0;
    padding: 0;
    height: 100%;
    background-color: #E9F1FA;
    
}

.navbar {
    display: flex;
    justify-content: center;
    align-items: center;
    position: fixed;
    top: 0;
    width:  100vw;
    background-color: #00ABE4;        
    padding: 10px;
    text-align: center;
    gap: 32px;
}

#nav-head {
    text-decoration: none;
    color: navy;
    font-size: 1.1em;
}

.nav-items {
    text-decoration: none;
    color: white;  
    font-size: 1.1em;  
}

.nav-items:hover {
    background-color: navy;    
}

.section {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;    
    background-color: #E9F1FA;
    text-align: center;        
    gap: 32px;
    margin: 0 100px 100px;
}

.page-header {
    font-size: 24px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 200px 0 24px 0; 
    
}

.section p {
    font-size: 1.5em;
    font-weight: bold;
}

.card {
    background-color: #00ABE4;
    border: 1px solid #2272FF;
    border-radius: 6px;
    padding: 8px;
    width:  400px;
    height: 300px;    
}

.syllabus:hover,
.card:hover {
    transform: translateY(-16px) scale(1.1);
}

img {
    object-fit: fill;
}

.horizontal-container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    border: 1px solid #2272FF;
    border-radius: 6px;
    padding: 8px;
    width:  100%;
    height: 300px;   

}

.vertical-container {
    border: none;     
    width:  47%;   
    margin: auto;    
}

.class-info {
    border: none;    
    padding: 8px;
    height: 70%;
    width: 45%;
}


.syllabus {
    background-color: #00ABE4;
    border: 1px solid #2272FF;    
    border-radius: 6px;
    padding: 8px;
    height: 90%;
    width: 60%;
}

.resources {
    border: 1px solid #2272FF;
    border-radius: 6px;
    padding: 8px;
    
}

.resources:hover {
    transform: translateY(-4px);
    background-color: #FFCE32;
}

.course-section {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center; 
    height: 80vh;   
    background-color: #E9F1FA;
    text-align: center;        
    gap: 32px;
    margin: 0 100px 100px;
    overflow: hidden;
    border-bottom: 8px solid #2272FF;     
}

